<resources>
    <string name="app_name">Chess</string>
    <string name="layout_main_play">Play</string>
    <string name="layout_main_recaps">Recaps</string>
    <string name="layout_main_quit">Quit</string>
    <string name="layout_main_title">Chess</string>
    <string name="layout_game_undo">Undo</string>
    <string name="layout_game_history">Draw</string>
    <string name="layout_game_player">Player</string>
    <string name="layout_game_quit">Quit</string>
    <string name="layout_game_ai">AI</string>
    <string name="layout_recaps_back">Back</string>
    <string name="layout_recaps_sort">Sort</string>
    <string name="layout_recaps_clear">Clear</string>
    <string name="layout_history_previous">Previous</string>
    <string name="layout_history_next">Next</string>
    <string name="turn_w">White\'s Turn</string>
    <string name="turn_b">Black\'s Turn</string>
    <string name="winner_w">White Wins!</string>
    <string name="winner_b">Black Wins!</string>
    <string name="chess_logo">Chess Logo</string>
</resources>
