<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_history">

    <Button
        android:id="@+id/l_history_next"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/b_ripple_white"
        android:onClick="onNext"
        android:text="@string/layout_history_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/l_history_back"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/b_ripple_white"
        android:onClick="onBack"
        android:text="@string/layout_recaps_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/l_history_previous"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/b_ripple_white"
        android:onClick="onPrevious"
        android:text="@string/layout_history_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ru.cs213.chess.Board
        android:id="@+id/l_history_board"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:isPlayable="false"
        app:layout_constraintBottom_toTopOf="@+id/l_history_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_history_previous" />

    <TextView
        android:id="@+id/l_history_moves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="move: 1"
        app:layout_constraintEnd_toEndOf="@+id/l_history_board"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/l_history_board"
        app:layout_constraintTop_toBottomOf="@+id/l_history_board" />

    <TextView
        android:id="@+id/l_history_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="white"
        app:layout_constraintBottom_toTopOf="@+id/l_history_board"
        app:layout_constraintEnd_toEndOf="@+id/l_history_board"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/l_history_board" />

    <TextView
        android:id="@+id/l_history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/layout_main_title"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/l_history_player"
        app:layout_constraintEnd_toEndOf="@+id/l_history_board"
        app:layout_constraintStart_toStartOf="@+id/l_history_board" />

</android.support.constraint.ConstraintLayout>